--- a/src/fanShutDownUps.ini
+++ b/src/fanShutDownUps.ini
@@ -12,7 +12,7 @@ DESIRED_CPU_TEMP_degC = 60
 SEND_STATUS_TO_UPSPLUS_IOT_PLATFORM = 1
 UPSPLUS_IOT_PLATFORM_URL = https://api.52pi.com/feed
 # loop frequency for battery status check. status will also be sent via MQTT with this frequency
-BATTERY_CHECK_LOOP_TIME_s = 60
+BATTERY_CHECK_LOOP_TIME_s = 6
 # ups will shut down RPi the power supply with this delay after OS shut down command was given
 SHUTDOWN_TIMEOUT_s = 60
 # supported values are between 100 and 500. Recommended value: 200
@@ -20,10 +20,10 @@ PROTECTION_VOLTAGE_MARGIN_mV = 200
 
 [mqtt]
 # leave BROKER blank to disable MQTT
-BROKER=localhost
+BROKER= homeassistant.local
 TCP_PORT = 1883
 # leave USERNAME blank if no login is required
-USERNAME = username
-PASSWORD = password
-TOPIC = home/rpi
+USERNAME = leandro
+PASSWORD = ***
+TOPIC = homeassistant/rpi
 
